<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_mine"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10.0dip"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/regist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/line" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/phone_icon"
        android:drawablePadding="5.0dip"
        android:hint="@string/hint_user_name"
        android:padding="20.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/password_icon"
        android:drawablePadding="5.0dip"
        android:hint="@string/hint_password"
        android:padding="20.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line" />

    <EditText
        android:id="@+id/password_again"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/password_icon"
        android:drawablePadding="5.0dip"
        android:hint="@string/hint_password_again"
        android:padding="20.0dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/code"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:drawableLeft="@mipmap/code_icon"
            android:drawablePadding="5.0dip"
            android:hint="@string/hint_code"
            android:padding="20.0dip" />

        <LinearLayout
            android:layout_width="1.0dip"
            android:layout_height="fill_parent"
            android:background="@color/line" />

        <TextView
            android:id="@+id/get_code"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="20.0dip"
            android:text="@string/get_code" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line" />

    <Button
        android:id="@+id/regist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:background="@drawable/btn_login"
        android:padding="20.0dip"
        android:text="@string/regist"
        android:textColor="@color/white"
        android:textSize="20.0sp" />
</LinearLayout>