<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_mine"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10.0dip"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/regist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/line"
        android:visibility="gone" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:drawableLeft="@mipmap/phone_icon"
        android:drawablePadding="5.0dip"
        android:hint="@string/hint_user_name"
        android:padding="20.0dip"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:drawableLeft="@mipmap/password_icon"
        android:drawablePadding="5.0dip"
        android:hint="@string/hint_password"
        android:padding="20.0dip"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@color/line"
        android:visibility="gone" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:background="@drawable/btn_login"
        android:padding="20.0dip"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20.0sp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:padding="20.0dip"
            android:text="@string/forget_password"
            android:textColor="@drawable/color_select" />

        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30.0dip"
            android:padding="20.0dip"
            android:text="@string/regist"
            android:textColor="@drawable/color_select" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:layout_centerHorizontal="true"
            android:text="正在自动登陆,请稍后..."
            android:textSize="25.0sp" />
    </RelativeLayout>
</LinearLayout>